--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           <li class="menu-item"><a href="#"><i class="fa fa-search"></i></a></li>
           <li class="menu-item have-cart"><a href="#"><i class="fa fa-shopping-cart"></i><span class="number">0</span></a></li>
         </ul>
-        <button class="btn-toggle"><i class="fa fa-bars"></i></button>
+        <!-- <button class="btn-toggle"><i class="fa fa-bars"></i></button> -->
       </div>
     </nav>
     <div class="search-box container">
@@ -306,7 +306,8 @@
         <div class="slide-content">
           <p class="sub-title">Onsectetuer adipiscing elit sit amet justo</p>
           <h2 class="title">Creative & Modern</h2>
-          <a href="">Get Started</a>
+          <h2 class="title mb-20">Agency Studio</h2>
+          <a href="">Get Started Now!</a>
         </div>
         <ul class="slideshow-list flex">
           <li class="item"><img src="image/slide_1.jpg" alt="Slide"></li>
