fix bug of responsive

--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@
               <li><a href="#">Product Sidebar</a></li>
             </ul>
           </li>
-          <li class="menu-item"><a href="#"><i class="fa fa-search"></i></a></li>
+          <li class="menu-item have-search"><i class="fa fa-search"></i></li>
           <li class="menu-item have-cart"><a href="#"><i class="fa fa-shopping-cart"></i><span class="number">0</span></a></li>
         </ul>
-        <!-- <button class="btn-toggle"><i class="fa fa-bars"></i></button> -->
+        <button class="btn-toggle"><i class="fa fa-bars"></i></button>
       </div>
     </nav>
     <div class="search-box container">
@@ -310,16 +310,16 @@
           <a href="">Get Started Now!</a>
         </div>
         <ul class="slideshow-list flex">
-          <li class="item"><img src="image/slide_1.jpg" alt="Slide"></li>
-          <!-- <li class="item"><img src="image/silde_2.jpg" alt="Slide"></li>
-          <li class="item"><img src="image/slide_3.jpg" alt="Slide"></li> -->
+          <li class="item-slide"><img src="image/slide_1.jpg" alt="Slide"></li>
+          <!-- <li class="item-slide"><img src="image/silde_2.jpg" alt="Slide"></li>
+          <li class="item-slide"><img src="image/slide_3.jpg" alt="Slide"></li> -->
         </ul>
         <!-- <button class="btn-prev"><i class="fa fa-chevron-left"></i></button>
         <button class="btn-next"><i class="fa fa-chevron-right"></i></button> -->
       </div>
       <div class="sliddeshow-bottom">
-        <div class="container relative">
-          <ul class="information-list flex absolute">
+        <div class="container">
+          <ul class="information-list flex relative">
             <li class="item col-4 text-center">
               <i class="fa fa-television"></i>
               <h5 class="title">Fully Responsive</h5>
@@ -364,14 +364,15 @@
       </div>
     </section>
     <section class="section-service">
-      <div class="service-top text-center">
-        <p class="subtitle">We are offring best Services</p>
+      <div class="service-top text-center relative">
+        <div class="bg-opacity3"></div>
+        <p class="subtitle relative">We are offring best Services</p>
         <h2 class="section-title">We offer best Services for your Business and Get unlimited Features and many more Features</h2>
-        <a class="btn btn-primary" href="#"><i class="fa fa-play-circle"></i>Read more</a>
+        <a class="btn btn-primary relative" href="#"><i class="fa fa-play-circle"></i>Read more</a>
       </div>
       <div class="service-bottom">
-        <div class="container relative">
-          <div class="main-content flex absolute">
+        <div class="container">
+          <div class="main-content flex relative">
             <div class="col-6">
               <p class="subtitle">Commodo augue Aliquam ornare</p>
               <h2 class="section-title">Get wide range of products and many more unlimited features</h2>
@@ -385,7 +386,8 @@
         </div>
       </div>
     </section>
-    <section class="section-features">
+    <section class="section-features relative">
+      <div class="bg-opacity"></div>
       <div class="container">
         <ul class="feature-list flex">
           <li class="item item-1 col-3 m-15">
@@ -443,7 +445,7 @@
               </div>
             </a>
           </li>
-          <li class="item col-4 hide">
+          <li class="item col-4">
             <a class="inner-item" href="#">
               <img src="/image/por-2.jpg" alt="Portfolio">
               <div class="inner-item-text">
@@ -451,7 +453,7 @@
               </div>
             </a>
           </li>
-          <li class="item col-4 hide">
+          <li class="item col-4">
             <a class="inner-item" href="#">
               <img src="/image/por-3.jpg" alt="Portfolio">
               <div class="inner-item-text">
@@ -459,7 +461,7 @@
               </div>
             </a>
           </li>
-          <li class="item col-4 hide">
+          <li class="item col-4">
             <a class="inner-item" href="#">
               <img src="/image/por-4.jpg" alt="Portfolio">
               <div class="inner-item-text">
@@ -467,7 +469,7 @@
               </div>
             </a>
           </li>
-          <li class="item col-4 hide">
+          <li class="item col-4">
             <a class="inner-item" href="#">
               <img src="/image/por-5.jpg" alt="Portfolio">
               <div class="inner-item-text">
@@ -475,7 +477,7 @@
               </div>
             </a>
           </li>
-          <li class="item col-4 hide">
+          <li class="item col-4">
             <a class="inner-item" href="#">
               <img src="/image/por-6.jpg" alt="Portfolio">
               <div class="inner-item-text">
@@ -487,15 +489,16 @@
       </div>
     </section>
     <section class="section-information text-center">
-      <div class="information-top">
+      <div class="information-top relative">
+        <div class="bg-opacity2"></div>
         <p class="subtitle">Our Excellent Skills and Projects</p>
         <h3 class="section-title">Praesent mattis commodo augue Aliquam ornare hendrerit augue Vestibulum ante ipsum primis in faucibus orci</h3>
         <p class="description">Praesent mattis commodo augue Aliquam ornare hendrerit augue Cras tellus In pulvinar lectus a est Curabitur eget orci Cras laoreet ligula Etiam .</p>
         <a class="btn btn-primary" href="#"><i class="fa fa-play-circle"></i>Read more</a>
       </div>
       <div class="information-bottom">
-        <div class="container relative">
-          <ul class="information-list absolute flex">
+        <div class="container">
+          <ul class="information-list relative flex">
             <li class="item col-3">
               <i class="fa fa-shopping-basket"></i>
               <h4 class="title">2560</h4>
@@ -559,7 +562,7 @@
           <p class="subtitle">Who We are and what we do</p>
           <h2 class="section-title">Suspendisse et justo Praesent mattis et amet Lorem ipsum dolor sit amet consectetuer</h2>
           <div class="content flex">
-            <div class="col-4">
+            <div class="col-4 text-center">
               <img src="/image/sus-content1.jpg" alt="">
             </div>
             <div class="col-8">
@@ -568,7 +571,7 @@
             </div>
           </div>
           <div class="content flex">
-            <div class="col-4">
+            <div class="col-4 text-center">
               <img src="/image/sus-content2.jpg" alt="">
             </div>
             <div class="col-8">
@@ -579,7 +582,7 @@
         </div>
       </div>
       <div class="suspendisse-bottom text-center">
-        <h4 class="title">Praesent mattis commodo augue Aliquam ornare hendrerit augue Cras tellus amet justo</h4>
+        <h4 class="title">Praesent mattis commodo augue Aliquam ornare <br> hendrerit augue Cras tellus amet justo</h4>
         <p class="subtitle">Praesent mattis commodo augue Aliquam ornare hendrerit augue Cras tellus In pulvinar.</p>
         <div class="action">
           <a href="#" class="btn btn-outline-light"><i class="fa fa-play-circle"></i>Get Started</a>
@@ -675,8 +678,8 @@
         <p class="description text-white">Praesent mattis commodo augue Aliquam ornare hendrerit augue Cras tellus In pulvinar lectus a est Curabitur eget orci Cras laoreet ligula Etiam .</p>
       </div>
       <div class="information-bottom">
-        <div class="container relative">
-          <ul class="information-list flex absolute">
+        <div class="container">
+          <ul class="information-list flex relative">
             <li class="item">
               <i class="fa fa-building-o"></i>
               <h5 class="title">Company</h5>
