--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <!-- <button class="btn-prev"><i class="fa fa-chevron-left"></i></button>
         <button class="btn-next"><i class="fa fa-chevron-right"></i></button> -->
       </div>
-      <div class="sliddeshow-bottom">
+      <div class="slideshow-bottom">
         <div class="container">
           <ul class="information-list flex relative">
             <li class="item col-4 text-center">
@@ -351,13 +351,13 @@
           <p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse et justo. Praesent mattis commodo augue Aliquam ornare hendrerit augue Cras tellus In pulvinar lectus a est Curabitur eget orci Cras laoreet ligula. Etiam sit amet dolor. Vestibulum ante ipsum primis onsectetuer adipiscing elit. Suspendisse et justo. Praesent mattis commodo augue Aliquam ornare hendrerit augue .</p>
           <ul class="introduction-list flex">
             <li><i class="fa fa-check"></i>Duis dictum auctor augue</li>
-            <li><i class="fa fa-check"></i>Suspendisse sit amet velit in dui.</li>
-            <li><i class="fa fa-check"></i>Phasellus a metus nec augue justo.</li>
             <li><i class="fa fa-check"></i>Duis dictum auctor augue</li>
-            <li><i class="fa fa-check"></i>Suspendisse sit amet velit in dui.</li>
-            <li><i class="fa fa-check"></i>Phasellus a metus nec augue justo.</li>
-            <li><i class="fa fa-check"></i>Suspendisse sit amet velit in dui.</li>
-            <li><i class="fa fa-check"></i>Suspendisse sit amet velit in dui.</li>
+            <li><i class="fa fa-check"></i>Duis dictum auctor augue</li>
+            <li><i class="fa fa-check"></i>Duis dictum auctor augue</li>
+            <li><i class="fa fa-check"></i>Duis dictum auctor augue</li>
+            <li><i class="fa fa-check"></i>Duis dictum auctor augue</li>
+            <li><i class="fa fa-check"></i>Duis dictum auctor augue</li>
+            <li><i class="fa fa-check"></i>Duis dictum auctor augue</li>
           </ul>
           <a class="btn btn-dark" href=""><i class="fa fa-play-circle"></i>Read more</a>
         </div>
@@ -523,36 +523,6 @@
         </div>
       </div>
     </section>
-    <!-- <section class="section-slideshow-bottom">
-      <h3 class="title">What our Clients says</h3>
-      <ul class="slideshow-list">
-        <li class="item">
-          <h6 class="description"></h6>
-          <p></p>
-          <p></p>
-        </li>
-        <li class="item">
-          <h6 class="description"></h6>
-          <p></p>
-          <p></p>
-        </li>
-        <li class="item">
-          <h6 class="description"></h6>
-          <p></p>
-          <p></p>
-        </li>
-        <li class="item">
-          <h6 class="description"></h6>
-          <p></p>
-          <p></p>
-        </li>
-        <li class="item">
-          <h6 class="description"></h6>
-          <p></p>
-          <p></p>
-        </li>
-      </ul>
-    </section> -->
     <section class="section-suspendisse">
       <div class="suspendisse-top flex">
         <div class="suspendisse-top-left col-6">
@@ -807,6 +777,9 @@
       <p>Copyright © 2017 l Company. All rights reserved.</p>
     </div>
   </footer>
+  <a class="btn-go-top">
+    <i class="fa fa-chevron-up"></i>
+  </a>
   <script src="handle.js"></script>
 </body>
 </html>
